# neoantigens

./: .gitignore  IPMN_2984.md  MON3.md  NeoepitopePred.md  README.md  Snakefile  environment.yml  install.sh  install_readme.sh  pVACfuse.md  pVACseq.md  setup.py  vaxrank.md  wt_KRAS.md
INTEGRATE-Neo/: README.md
INTEGRATE-Neo/Examples/: README.txt
INTEGRATE-Neo/Examples/example1/: README.txt
INTEGRATE-Neo/Examples/example1/fusion_antigen_out/: HLAminer_HPRA.csv  HLAminer_alleles.tsv  fusions.bedpe.annot  netMHC4.0.out.append.txt  result.bedpe
INTEGRATE-Neo/Examples/example1/fusion_antigen_out/tmp/: 1.sai  2.sai  all.sam  netMHC4.0.k10.fasta  netMHC4.0.k8.fasta
INTEGRATE-Neo/Examples/example2/: README.txt  fusions.bedpe
INTEGRATE-Neo/Examples/example2/fusion_antigen_out/: fusions.bedpe.subset  netMHC4.0.out.append.txt
INTEGRATE-Neo/Examples/example2/fusion_antigen_out/tmp/: netMHC4.0.k11.fasta  netMHC4.0.k9.fasta
INTEGRATE-Neo/INTEGRATE-Neo-V-1.2.1/: install.sh
INTEGRATE-Neo/INTEGRATE-Neo-V-1.2.1/src/: HLAminerToTsv.py  difile.txt  integrate-neo.py  rule.txt  runAddNetMHC4Result.py  runHLAminer.py  runNetMHC4WithSMCRNABedpe.py  setup.ini
INTEGRATE-Neo/INTEGRATE-Neo-V-1.2.1/src/BedpeAnnotator/: CMakeLists.txt
INTEGRATE-Neo/INTEGRATE-Neo-V-1.2.1/src/BedpeAnnotator/src/: Annotate.cpp  Annotate.h  AnnotateDi.cpp  AnnotateDi.h  Bedpe.h  CMakeLists.txt  Dinucleo.cpp  Dinucleo.h  Gene2.cpp  Gene2.h  MyTypes.h  Reference.cpp  Reference.h  Util.cpp  Util.h  main.cpp
INTEGRATE-Neo/INTEGRATE-Neo-V-1.2.1/src/Subsetter/src/: Bedpe.cpp  CMakeLists.txt  CutterByRule.cpp  CutterByRule.h  MyTypes.h  Util.cpp  Util.h  main.cpp
docs/: openvax.md  pVACfuse.md  pVACseq.md  ptuneos.md
docs/wt_KRAS/: 2018-08-15T1051_Research-Croagh-KRAS-wt_WGS-merged-multiqc_report.html
nag/: Snakefile  __init__.py  _version.py  nag  pizzly_to_bedpe.py
nag/balachandran/: Aligner.py  README  main.py  run.sh
nag/balachandran/data/: SupplementaryTable1.txt  iedb.fasta  iedb.fasta.phr  iedb.fasta.pin  iedb.fasta.psq
neoantigens/: Snakefile  neoantigens.py  pizzly_to_bedpe.py
pizzly/: CCR180081_MH18T002P053_RNA-flat-filtered.bedpe  CCR180081_MH18T002P053_RNA-flat-filtered.tsv  CCR180081_MH18T002P053_RNA-pVACfuse.bedpe  CCR180109_VPT-EH09_RNA-flat-filtered.bedpe  CCR180109_VPT-EH09_RNA-flat-filtered.tsv  CCR180109_VPT-EH09_RNA.filt.json  CCR180109_VPT-EH09_RNA.fusions.filt.fasta  pizzly_to_bedpe.py
pizzly_examples/: CCR180081_MH18T002P053_RNA-flat-filtered-annotated-subset.bedpe  CCR180081_MH18T002P053_RNA.filt.json  CCR180081_MH18T002P053_RNA.fusions.filt.fasta
scripts/: nag  nag_summarize  pizzly_to_bedpe.py
